# px4_fault_ws

./: .gitignore  README.md  build.sh  create_session.sh  launch_nodes.sh  launch_sim.sh  update.sh
px4_custom_interfaces/: CMakeLists.txt  package.xml
px4_custom_interfaces/srv/: MergeTarget.srv
px4_fault_injection/: CMakeLists.txt  package.xml
px4_fault_injection/config/: circuit_params.yaml  fault_label_descriptors.yaml  metadata.yaml  mission_params.yaml
px4_fault_injection/launch/: mission_circuit_recorder.launch.py
px4_fault_injection/scripts/: circuit_recorder.py  data_merger.py  data_merger_service.py  drone_controller.py  drone_state_monitor.py  dual_subscriber.py  fault_injection_manager.py  fault_injector_service.py  fault_injectors.py  fault_manager.py  iteration_runner.py  mission_circuit.py  mission_manager.py  sensor_recorder_unsync.py  simulation_manager.py  test.py
scripts/: configure.py  create_session.sh  kill_session.sh  update.sh
